# EQUISCALE

./: .gitignore  Adult_KP1_Ind_0.20625_0.20625.txt  Adult_KP1_Ind_0.210938_0.210938.txt  Adult_KP1_Ind_0.2125.txt  Adult_KP1_Ind_0.215625_0.215625.txt  Adult_KP1_Ind_0.220312.txt  Adult_KP1_Ind_0.220312_0.220312.txt  Adult_KP1_Ind_0.225_0.225.txt  Adult_KP1_Ind_0.228125.txt  Adult_KP1_Ind_0.229687_0.229687.txt  Adult_KP1_Ind_0.234375_0.234375.txt  Adult_KP1_Ind_0.235937.txt  Adult_KP1_Ind_0.239062_0.239062.txt  Adult_KP1_Ind_0.24375.txt  Adult_KP1_Ind_0.24375_0.24375.txt  Adult_KP1_Ind_0.248437_0.248437.txt  Adult_KP1_Ind_0.251563.txt  Adult_KP1_Ind_0.253125_0.253125.txt  Adult_KP1_Ind_0.257812_0.257812.txt  Adult_KP1_Ind_0.259375.txt  Adult_KP1_Ind_0.2625_0.2625.txt  Adult_KP1_Ind_0.267187_0.267187.txt  Adult_KP1_Ind_0.267188.txt  Adult_KP1_Ind_0.271875_0.271875.txt  Adult_KP1_Ind_0.275.txt  Adult_KP1_Ind_0.276562_0.276562.txt  Adult_KP1_Ind_0.28125_0.28125.txt  Adult_KP1_Ind_0.282813.txt  Adult_KP1_Ind_0.285937_0.285937.txt  Adult_KP1_Ind_0.290625.txt  Adult_KP1_Ind_0.290625_0.290625.txt  Adult_KP1_Ind_0.295312_0.295312.txt  Adult_KP1_Ind_0.298438.txt  Adult_KP1_Ind_0.30625.txt  Adult_KP1_Ind_0.314063.txt  Adult_KP1_Ind_0.321875.txt  Adult_KP1_Ind_0.329688.txt  Adult_KP1_Ind_0.3375.txt  Adult_KP1_Ind_0.345313.txt  Adult_KP1_Ind_0.353125.txt  (+186 more)
data/: adult.csv  adult_test.csv  adult_train.csv  bank.csv  compas.csv  create_data.ipynb  default.csv  german.csv
dpabst/: get_data.py  make_experiment.py  metrics.py  run_experiments.py  utils.py
run_configs/: 1.json  2.json  (+11 more)
(+4805 files in other folders)
