[project]
name = "equiscale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.28.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]
